--- a/Style.css
+++ b/Style.css
@@ -196,7 +196,7 @@ header {
 
 nav {
 	display: flex;
-	justify-content: space-evenly;
+	justify-content: center;
 	align-items: center;
 	padding: 20px;
 }
@@ -210,6 +210,7 @@ nav {
 	display: flex;
 	padding: 0;
 	margin-right: 50px;
+	gap: 16px;
 }
 
 .nav-links li {
@@ -320,7 +321,7 @@ img.right-logo {
 /* section */
 .empty-section {
 	width: 100%;
-	height: 260px;
+	height: 230px;
 	flex-grow: 0;
 	background-color: #fff;
 }
@@ -446,7 +447,7 @@ p {
 	margin: 0 auto;
 	background-color: #ffffff;
 	position: absolute;
-	top: -175%;
+	top: -190%;
 	left: 6%;
 	border-radius: 25px;
 	box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.05);
