--- a/Style.css
+++ b/Style.css
@@ -197,6 +197,7 @@ nav {
 	justify-content: center;
 	align-items: center;
 	padding: 20px;
+	gap: 30px;
 }
 
 .logo img {
@@ -207,7 +208,7 @@ nav {
 	list-style: none;
 	display: flex;
 	padding: 0;
-	margin-right: 50px;
+	margin-left: 80px;
 	gap: 16px;
 }
 
