--- a/Style.css
+++ b/Style.css
@@ -53,7 +53,7 @@ body {
 	border: none;
 	background: none;
 	cursor: pointer;
-	margin-bottom: 2px;
+	margin-bottom: 4px;
 	color: #8b8b8b;
 	font-family: 'Inter';
 }
@@ -187,7 +187,7 @@ img.line2 {
 header {
 	position: relative;
 	background: url('banner.png') no-repeat center center/cover;
-	height: 100vh;
+	height: 90vh;
 	color: white;
 	background-size: cover;
 }
@@ -197,7 +197,7 @@ nav {
 	justify-content: center;
 	align-items: center;
 	padding: 20px;
-	/* gap: 30px; */
+	gap: 34px;
 }
 
 .logo img {
